--- a/style.css
+++ b/style.css
@@ -59,3 +59,32 @@ h1.site-title span {
   stroke: #000;
   stroke-width: 2;
 }
+
+.color-box {
+  background-color: white;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  border: 1px white 
+}
+
+.color-box--black {
+  background-color: rgb(0, 0, 0);
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+}
+
+.color-box--red {
+  background-color: rgb(129, 61, 61);
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+}
+
+.color-box--blue {
+  background-color: rgb(156, 213, 239);
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+}
