--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1.site-title span {
   height: 2rem;
   width: 2rem;
   border-radius: 50%;
-  border: 1px white 
+  box-shadow: 0px -1px 10px -3px #FFFFFF;
 }
 
 .color-box--black {
