--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   max-width: 840px;
   margin-left: auto;
   margin-right: auto;
-  height: 300px;
 }
 
 header {
@@ -50,6 +49,7 @@ h1.site-title span {
   padding: 3rem;
   background-color: #141518;
   display: flex;
+  justify-content: space-between;
 }
 
 .product__image {
@@ -63,7 +63,15 @@ h1.site-title span {
 }
 
 .product__colors {
-  margin-left: 50px;
+  margin-left: -150px;
+}
+.colors {
+  display: flex;
+  justify-content: space-between;
+}
+.color {
+  text-align: center;
+  padding-left: 20px;
 }
 .color-box {
   background-color: white;
@@ -71,6 +79,7 @@ h1.site-title span {
   width: 2rem;
   border-radius: 50%;
   box-shadow: 0px -1px 10px -3px #ffffff;
+  margin: auto;
 }
 
 .color-box--black {
@@ -92,4 +101,13 @@ h1.site-title span {
   height: 2rem;
   width: 2rem;
   border-radius: 50%;
+}
+
+.product__order {
+  background-color: #141518;
+  color: #ffffff;
+  height: 2rem;
+  border-radius: 30px;
+  border: 1px solid #ffffff;
+  width: 10rem;
 }
